# LearnOpenCL

./: CMakeLists.txt
cmake/: GoogleBenchmark.cmake  GoogleTest.cmake  OpenCL.cmake
src/: CMakeLists.txt
src/OpenCLInfo/: main.cpp
src/OpenclInfo/: CMakeLists.txt
src/VectorAdd/: CMakeLists.txt  VectorAdd.cpp
test/: CMakeLists.txt
test/OpenCLTest/: CMakeLists.txt  OpenCLTest.cpp
